Update page title from 'Malemnganba Wairokpam' to 'Malemnganba Chenglei Wairokpam'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Malemnganba Wairokpam</title>
+    <title>Malemnganba Chenglei Wairokpam</title>
     <style>
         body {
             font-family: Georgia, serif;
