Update email address in index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 <h1>Malemnganba Chenglei Wairokpam</h1>
-<p>Public Servant | Public Policy and Finance | Governance & Research</p>
+<p>Indian Administrative Service (IAS) | Public Policy and Finance | Governance & Research</p>
 
 <div class="section">
 <h2>About</h2>
@@ -56,7 +56,7 @@ Serving in public administration with experience across district governance, hig
 
 <div class="section">
 <h2>Contact</h2>
-<p>Email: w.m.chenglei@email.com</p>
+<p>Email: w.m.chenglei@gmail.com</p>
 </div>
 
 </body>
