--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 <h1>Malemnganba Chenglei Wairokpam</h1>
-<p>Indian Administrative Service (IAS) | Public Policy and Finance | Governance & Research</p>
+<p>Indian Administrative Service (IAS) | Governance | Public Policy | Finance | Economic and Data Analysis </p>
 
 <div class="section">
 <h2>About</h2>
