--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ Serving in public administration with experience across district governance, hig
 <h2>Education</h2>
 <ul>
 <li>MA in Public Policy with Certiifcate In Research Methods (MACRM)– Harris School of Public Policy, University of Chicago</li>
-<li>Master of Public Administration (MPA) – London School of Economics</li>
-<li>Master of Science in Physics – St. Stephens' College, University of Delhi</li>
+<li>Master of Public Administration (MPA) – London School of Economics, Joint Japan Graduate World Bank Scholar</li>
+<li>Master of Science (MSc) in Physics – St. Stephens' College, University of Delhi</li>
 <li>Bachelor of Science (Honours) in Physics – St. Stephens' College, University of Delhi</li>
 </ul>
 </div>
@@ -48,9 +48,11 @@ Serving in public administration with experience across district governance, hig
 <div class="section">
 <h2>Experience</h2>
 <ul>
-<li>Deputy Commissioner, Jiribam</li>
+<li>Secretary (Cooperation) & Special Secretary (Finance)</li>
+<li>Deputy Commissioner, Jiribam</li>  
 <li>Director, Higher & Technical Education</li>
 <li>Managing Director, Manipur State Power Distribution Company Ltd.</li>
+<li>Registrar, Manipur Technical University (MTU)</li>
 </ul>
 </div>
 
