Add educational background sections to index.html
Added sections for Scholarships, Teaching Experience, and Publications to enhance the educational background.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,32 @@ Serving in public administration with experience across district governance, hig
 <h2>Education</h2>
 <ul>
 <li>MA in Public Policy with Certiifcate In Research Methods (MACRM)– Harris School of Public Policy, University of Chicago</li>
-<li>Master of Public Administration (MPA) – London School of Economics, Joint Japan Graduate World Bank Scholar</li>
+<li>Master of Public Administration (MPA) – London School of Economics</li>
 <li>Master of Science (MSc) in Physics – St. Stephens' College, University of Delhi</li>
 <li>Bachelor of Science (Honours) in Physics – St. Stephens' College, University of Delhi</li>
 </ul>
 </div>
 
+<div class="section">
+<h2>Scholarships and Fellowships</h2>
+<li>Joint Japan Graduate World Bank Scholar</li>
+<li>Harris School of Public Policy, University of Chicago</li>
+<li>CSIR JRF NET in Physics</li>  
+    
+<div class="section">
+<h2>Teaching Experience</h2>
+<ul>
+<li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
+<li>Lecturer, Kirori Mal College, University of Delhi</li>  
+
+    <div class="section">
+<h2>Publications</h2>
+<ul>
+<li>CSIR UGC Physical Sciences by Arihant Publications</li>
+</ul>
+</div>
+
+    
 <div class="section">
 <h2>Experience</h2>
 <ul>
