Refactor index.html for improved layout and content
Updated HTML structure and content for better presentation.

--- a/index.html
+++ b/index.html
@@ -1,84 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Malemnganba Chenglei Wairokpam</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Georgia, serif;
             max-width: 800px;
-            margin: 60px auto;
-            line-height: 1.8;
+            margin: 40px auto;
+            line-height: 1.7;
             color: #222;
+            padding: 0 15px;
+        }
+        h1, h2 {
+            color: #1a1a1a;
         }
         h1 {
             border-bottom: 2px solid #444;
             padding-bottom: 10px;
         }
-        .section {
+        h2 {
             margin-top: 40px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+        ul {
+            margin-top: 10px;
         }
         a {
             color: #1a73e8;
             text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .section {
+            margin-top: 30px;
+        }
+        .contact-links a {
+            margin-right: 15px;
         }
     </style>
 </head>
 <body>
 
 <h1>Malemnganba Chenglei Wairokpam</h1>
-<p>Indian Administrative Service (IAS) | Governance | Public Policy | Finance | Economic and Data Analysis </p>
+<p>Indian Administrative Service (IAS) | Governance | Public Policy | Public Finance | Data & Economic Analysis</p>
 
 <div class="section">
-<h2>About</h2>
-<p>
-Serving in public administration with experience across district governance, higher education, and public financial management. Academic training in public policy, economics, and quantitative methods.
-</p>
+    <h2>About</h2>
+    <p>
+        Serving in public administration with experience across district governance, higher education, and public financial management. Academic training in public policy, economics, and quantitative methods.
+    </p>
 </div>
 
 <div class="section">
-<h2>Education</h2>
-<ul>
-<li>MA in Public Policy with Certiifcate In Research Methods (MACRM)– Harris School of Public Policy, University of Chicago</li>
-<li>Master of Public Administration (MPA) – London School of Economics</li>
-<li>Master of Science (MSc) in Physics – St. Stephens' College, University of Delhi</li>
-<li>Bachelor of Science (Honours) in Physics – St. Stephens' College, University of Delhi</li>
-</ul>
+    <h2>Education</h2>
+    <ul>
+        <li>MA in Public Policy with Certificate in Research Methods (MACRM) – Harris School of Public Policy, University of Chicago</li>
+        <li>Master of Public Administration (MPA) – London School of Economics</li>
+        <li>Master of Science (MSc) in Physics – St. Stephen's College, University of Delhi</li>
+        <li>Bachelor of Science (Honours) in Physics – St. Stephen's College, University of Delhi</li>
+    </ul>
 </div>
 
 <div class="section">
-<h2>Scholarships and Fellowships</h2>
-<li>Joint Japan Graduate World Bank Scholar</li>
-<li>Harris School of Public Policy, University of Chicago</li>
-<li>CSIR JRF NET in Physics</li>  
-    
-<div class="section">
-<h2>Teaching Experience</h2>
-<ul>
-<li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
-<li>Lecturer, Kirori Mal College, University of Delhi</li>  
-
-    <div class="section">
-<h2>Publications</h2>
-<ul>
-<li>CSIR UGC Physical Sciences by Arihant Publications</li>
-</ul>
-</div>
-
-    
-<div class="section">
-<h2>Experience</h2>
-<ul>
-<li>Secretary (Cooperation) & Special Secretary (Finance)</li>
-<li>Deputy Commissioner, Jiribam</li>  
-<li>Director, Higher & Technical Education</li>
-<li>Managing Director, Manipur State Power Distribution Company Ltd.</li>
-<li>Registrar, Manipur Technical University (MTU)</li>
-</ul>
+    <h2>Scholarships and Fellowships</h2>
+    <ul>
+        <li>Joint Japan Graduate World Bank Scholar</li>
+        <li>Harris School of Public Policy, University of Chicago</li>
+        <li>CSIR JRF NET in Physics</li>
+    </ul>
 </div>
 
 <div class="section">
-<h2>Contact</h2>
-<p>Email: w.m.chenglei@gmail.com</p>
+    <h2>Teaching Experience</h2>
+    <ul>
+        <li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
+        <li>Lecturer, Kirori Mal College, University of Delhi</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Publications</h2>
+    <ul>
+        <li>CSIR UGC Physical Sciences – Arihant Publications</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Experience</h2>
+    <ul>
+        <li>Secretary (Cooperation) & Special Secretary (Finance)</li>
+        <li>Deputy Commissioner, Jiribam</li>
+        <li>Director, Higher & Technical Education</li>
+        <li>Managing Director, Manipur State Power Distribution Company Ltd.</li>
+        <li>Registrar, Manipur Technical University (MTU)</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
+    <p class="contact-links">
+        <a href="https://www.linkedin.com/in/wairokpam-malemnganba-chenglei-9b640862" target="_blank">LinkedIn</a>
+        <a href="https://calendly.com/wmchenglei" target="_blank">Calendly</a>
+    </p>
 </div>
 
 </body>
