--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
         <li>Registrar, Manipur Technical University (MTU)</li>
     </ul>
 </div>
-
+<div class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
+    <p class="contact-links">
+        <a href="https://www.linkedin.com/in/wairokpam-malemnganba-chenglei-9b640862" target="_blank">LinkedIn</a>
+        <a href="https://calendly.com/wmchenglei" target="_blank">Calendly</a>
+    </p>
+</div>
 <div class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
