--- a/index.html
+++ b/index.html
@@ -99,14 +99,17 @@
         <li>Registrar, Manipur Technical University (MTU)</li>
     </ul>
 </div>
+
+<!-- New Public Documents Section -->
 <div class="section">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
-    <p class="contact-links">
-        <a href="https://www.linkedin.com/in/wairokpam-malemnganba-chenglei-9b640862" target="_blank">LinkedIn</a>
-        <a href="https://calendly.com/wmchenglei" target="_blank">Calendly</a>
-    </p>
+    <h2>Public Documents</h2>
+    <ul>
+        <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
+        <!-- Add more PDFs here if needed -->
+    </ul>
 </div>
+
+<!-- Contact Section -->
 <div class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
