Update description of professional experience

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="section">
     <h2>About</h2>
     <p>
-        Serving in public administration with experience across district governance, higher education, and public financial management. Academic training in public policy, economics, and quantitative methods.
+        IAS officer with experience across district governance, higher education, and public financial management. Academic training in public policy, economics, and quantitative methods.
     </p>
 </div>
 
