Add profile image to index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     </style>
 </head>
 <body>
-
+<div class="section" style="text-align: center;">
+    <img src="profile.jpg" alt="Malemnganba Chenglei Wairokpam" 
+         style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 20px;">
+</div>
 <h1>Malemnganba Chenglei Wairokpam</h1>
 <p>Indian Administrative Service (IAS) | Governance | Public Policy | Public Finance | Data & Economic Analysis</p>
 
