Update teaching and experience descriptions in HTML

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 <div class="section">
     <h2>Teaching Experience</h2>
     <ul>
-        <li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
+        <li>Teaching Assistant (MPP Level Microeconomics), Harris School of Public Policy, University of Chicago</li>
+        <li>Grader (PhD Microeconomics for Public Policy), Harris School of Public Policy, University of Chicago</li>
         <li>Lecturer, Kirori Mal College, University of Delhi</li>
     </ul>
 </div>
@@ -95,10 +96,10 @@
 <div class="section">
     <h2>Experience</h2>
     <ul>
-        <li>Secretary (Cooperation) & Special Secretary (Finance)</li>
+        <li>Secretary (Cooperation) & Special Secretary (Finance), Government of Manipur</li>
         <li>Deputy Commissioner, Jiribam</li>
-        <li>Director, Higher & Technical Education</li>
-        <li>Managing Director, Manipur State Power Distribution Company Ltd.</li>
+        <li>Director, University & Higher Education, Manipur</li>
+        <li>Managing Director, Manipur State Power Distribution Company Ltd. Manipur</li>
         <li>Registrar, Manipur Technical University (MTU)</li>
     </ul>
 </div>
