--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <img src="profile.jpeg" alt="Malemnganba Chenglei Wairokpam" 
          style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 20px;">
 </div>
-<h1>Malemnganba Chenglei Wairokpam</h1>
+<h1>Wairokpam Malemnganba Chenglei</h1>
 <p>Indian Administrative Service (IAS) | Governance | Public Policy | Public Finance | Data & Economic Analysis</p>
 
 <div class="section">
@@ -71,7 +71,7 @@
 <div class="section">
     <h2>Scholarships and Fellowships</h2>
     <ul>
-        <li>Joint Japan Graduate World Bank Scholar</li>
+        <li>Joint Japan Graduate World Bank Scholarship</li>
         <li>Harris School of Public Policy, University of Chicago</li>
         <li>CSIR JRF NET in Physics</li>
     </ul>
