--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </div>
 
 <div class="section">
-    <h2>Experience</h2>
+    <h2>Professional Experience</h2>
     <ul>
         <li>Secretary (Cooperation) & Special Secretary (Finance), Government of Manipur</li>
         <li>Deputy Commissioner, Jiribam</li>
