--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 <div class="section" style="text-align: center;">
-    <img src="profile.jpeg" alt="Malemnganba Chenglei Wairokpam" 
+    <img src="profile.jpeg" alt="Wairokpam Malemnganba Chenglei" 
          style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 20px;">
 </div>
 <h1>Wairokpam Malemnganba Chenglei</h1>
