Refactor HTML structure and styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Wairokpam Malemnganba Chenglei</title>
+    <title>Wairokpam Malemnganba Chenglei</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -19,6 +19,7 @@
         h1 {
             border-bottom: 2px solid #444;
             padding-bottom: 10px;
+            text-align: center;
         }
         h2 {
             margin-top: 40px;
@@ -41,16 +42,32 @@
         .contact-links a {
             margin-right: 15px;
         }
+        .profile-pic {
+            display: block;
+            margin: 0 auto 20px auto;
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
-<div class="section" style="text-align: center;">
-    <img src="profile.jpeg" alt="Wairokpam Malemnganba Chenglei" 
-         style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; margin-bottom: 20px;">
-</div>
-<h1>Wairokpam Malemnganba Chenglei</h1>
-<p>Indian Administrative Service (IAS) | Governance | Public Policy | Public Finance | Data & Economic Analysis</p>
 
+<!-- Profile Photo -->
+<div class="section" style="text-align: center;">
+    <img src="profile.jpeg" alt="Wairokpam Malemnganba Chenglei" class="profile-pic">
+</div>
+
+<!-- Name -->
+<h1>Wairokpam Malemnganba Chenglei</h1>
+
+<!-- Short Bio -->
+<p style="text-align: center;">
+    Indian Administrative Service (IAS) | Governance | Public Policy | Public Finance | Data & Economic Analysis
+</p>
+
+<!-- About -->
 <div class="section">
     <h2>About</h2>
     <p>
@@ -58,6 +75,7 @@
     </p>
 </div>
 
+<!-- Education -->
 <div class="section">
     <h2>Education</h2>
     <ul>
@@ -68,24 +86,26 @@
     </ul>
 </div>
 
+<!-- Scholarships and Fellowships -->
 <div class="section">
     <h2>Scholarships and Fellowships</h2>
     <ul>
-        <li>Joint Japan Graduate World Bank Scholarship</li>
+        <li>Joint Japan Graduate World Bank Scholar</li>
         <li>Harris School of Public Policy, University of Chicago</li>
         <li>CSIR JRF NET in Physics</li>
     </ul>
 </div>
 
+<!-- Teaching Experience -->
 <div class="section">
     <h2>Teaching Experience</h2>
     <ul>
-        <li>Teaching Assistant (MPP Level Microeconomics), Harris School of Public Policy, University of Chicago</li>
-        <li>Grader (PhD Microeconomics for Public Policy), Harris School of Public Policy, University of Chicago</li>
+        <li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
         <li>Lecturer, Kirori Mal College, University of Delhi</li>
     </ul>
 </div>
 
+<!-- Publications -->
 <div class="section">
     <h2>Publications</h2>
     <ul>
@@ -93,31 +113,29 @@
     </ul>
 </div>
 
+<!-- Professional Experience -->
 <div class="section">
     <h2>Professional Experience</h2>
     <ul>
-        <li>Secretary (Cooperation) & Special Secretary (Finance), Government of Manipur</li>
+        <li>Secretary (Cooperation) & Special Secretary (Finance)</li>
         <li>Deputy Commissioner, Jiribam</li>
-        <li>Director, University & Higher Education, Manipur</li>
-        <li>Managing Director, Manipur State Power Distribution Company Ltd. Manipur</li>
+        <li>Director, Higher & Technical Education</li>
+        <li>Managing Director, Manipur State Power Distribution Company Ltd.</li>
         <li>Registrar, Manipur Technical University (MTU)</li>
     </ul>
 </div>
 
-<!-- New Public Documents Section -->
+<!-- Public Documents -->
 <div class="section">
     <h2>Public Documents</h2>
     <ul>
         <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
-        <li><a href="16 FC_Volume I.pdf" target="_blank">16th Finance Commission Volume I</a></li>
-        <li><a href="16 FC_Volume II.pdf" target="_blank">16th Finance Commission Volume II</a></li>
-         <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
-         <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24</a></li>
-        <!-- Add more PDFs here if needed -->
+        <li><a href="16 FC Volume I.pdf" target="_blank">16th Finance Commission Volume I</a></li>
+        <li><a href="16 FC Volume II.pdf" target="_blank">16th Finance Commission Volume II</a></li>
     </ul>
 </div>
 
-<!-- Contact Section -->
+<!-- Contact -->
 <div class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:w.m.chenglei@gmail.com">w.m.chenglei@gmail.com</a></p>
