--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <h2>Public Documents</h2>
     <ul>
         <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
-        <li><a href="16 FC Volume I.pdf" target="_blank">16th Finance Commission Volume I</a></li>
-        <li><a href="16 FC Volume II.pdf" target="_blank">16th Finance Commission Volume II</a></li>
+        <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
+        <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
     </ul>
 </div>
 
