--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
         <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
         <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
-         <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic_Survey_Manipur_2022-23.pdf</a></li>
-         <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic_Survey_Manipur_2023-24.pdf</a></li>
+         <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23.pdf</a></li>
+         <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24.pdf</a></li>
     </ul>
 </div>
 
