--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 <div class="section">
     <h2>Teaching Experience</h2>
     <ul>
-        <li>Teaching Assistant, Harris School of Public Policy, University of Chicago</li>
+        <li>Teaching Assistant (MPP Level Microeconomics), Harris School of Public Policy, University of Chicago</li>
+        <li>Grader (PhD Level Microeconomics), Harris School of Public Policy, University of Chicago</li>
         <li>Lecturer, Kirori Mal College, University of Delhi</li>
     </ul>
 </div>
