--- a/index.html
+++ b/index.html
@@ -130,12 +130,20 @@
 <div class="section">
     <h2>Public Documents</h2>
     <ul>
+        <!-- Existing PDFs -->
         <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
         <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
         <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
-         <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23.pdf</a></li>
-         <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24.pdf</a></li>
-         <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP.pdf</a></li>
+        <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
+        <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24</a></li>
+        <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP</a></li>
+
+        <!-- Dashboards zip -->
+        <li>
+            <a href="State_Finances_2025-26.zip" target="_blank">
+                Download All State Finances 2025-26 Dashboard Files
+            </a>
+        </li>
     </ul>
 </div>
 
