Update dashboard links for State Finances 2025-26

--- a/index.html
+++ b/index.html
@@ -138,12 +138,22 @@
         <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24</a></li>
         <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP</a></li>
 
-        <!-- Dashboards zip -->
-        <li>
-            <a href="State_Finances_2025-26.zip" target="_blank">
-                Download All State Finances 2025-26 Dashboard Files
-            </a>
-        </li>
+        <!-- State Finances 2025-26 Dashboards -->
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)" target="_blank">Dashboard A1</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv" target="_blank">Dashboard A2</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv" target="_blank">Dashboard A3</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv" target="_blank">Dashboard A4</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv" target="_blank">Dashboard A5</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv" target="_blank">Dashboard A6</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv" target="_blank">Dashboard A7</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv" target="_blank">Dashboard A8</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv" target="_blank">Dashboard A9</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv" target="_blank">Dashboard A10</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv" target="_blank">Dashboard A11</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv" target="_blank">Dashboard A12</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv" target="_blank">Dashboard A1 Rev Receipt</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv" target="_blank">Dashboard A2 Rev Receipt Components</a></li>
+        <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv" target="_blank">Final Annexures for PSF 2023-24</a></li>
     </ul>
 </div>
 
