Fix links and formatting for State Finances dashboards

--- a/index.html
+++ b/index.html
@@ -139,21 +139,19 @@
         <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP</a></li>
 
         <!-- State Finances 2025-26 Dashboards -->
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)" target="_blank">Dashboard A1</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv" target="_blank">Dashboard A2</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv" target="_blank">Dashboard A3</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv" target="_blank">Dashboard A4</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv" target="_blank">Dashboard A5</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv" target="_blank">Dashboard A6</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv" target="_blank">Dashboard A7</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv" target="_blank">Dashboard A8</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv" target="_blank">Dashboard A9</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv" target="_blank">Dashboard A10</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv" target="_blank">Dashboard A11</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv" target="_blank">Dashboard A12</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv" target="_blank">Dashboard A1 Rev Receipt</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv" target="_blank">Dashboard A2 Rev Receipt Components</a></li>
-        <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv" target="_blank">Final Annexures for PSF 2023-24</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A10_object%20head%20wi).csv" target="_blank">Dashboard A10</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A11_PD%26PAL).csv" target="_blank">Dashboard A11</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A12_FRBM_FA).csv" target="_blank">Dashboard A12</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A1_Rev%20Receipt).csv" target="_blank">Dashboard A1 Rev Receipt</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A2_Rev%20Receipt%20Components).csv" target="_blank">Dashboard A2 Rev Receipt Components</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A3_Cap%20Receipts%20Components).csv" target="_blank">Dashboard A3</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A4_Revex%20%26%20CapexIncludingLA).csv" target="_blank">Dashboard A4</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A5_Committed%20Exp).csv" target="_blank">Dashboard A5</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A6_Sectoral%20RevExp).csv" target="_blank">Dashboard A6</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A7_SectoralCapexWithLA).csv" target="_blank">Dashboard A7</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A8_RevEx%20Maj%20Functions).csv" target="_blank">Dashboard A8</a></li>
+        <li><a href="State_Finances_2025-26/Dashbord_%20Master%20data%202022-23NoEdit(A9_Capex%20Major%20LA%20Added).csv" target="_blank">Dashboard A9</a></li>
+        <li><a href="State_Finances_2025-26/Final%20Annexures%20for%20PSF%202023-2024(A8_%20Total_Secotral_Exp).csv" target="_blank">Final Annexures for PSF 2023-24</a></li>
     </ul>
 </div>
 
