Refactor Public Documents and State Finances sections

--- a/index.html
+++ b/index.html
@@ -128,33 +128,38 @@
 
 <!-- Public Documents -->
 <div class="section">
-    <h2>Public Documents</h2>
-    <ul>
-        <!-- Existing PDFs -->
-        <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
-        <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
-        <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
-        <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
-        <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24</a></li>
-        <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP</a></li>
+  <h2>Public Documents</h2>
+  <ul>
+    <!-- Existing PDFs -->
+    <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
+    <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
+    <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
+    <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
+    <li><a href="Economic_Survey_Manipur_2023-24.pdf" target="_blank">Economic Survey Manipur 2023-24</a></li>
+    <li><a href="Guidance_RFP_PPP.pdf" target="_blank">Model Guidance RFP for PPP</a></li>
+  </ul>
 
-        <!-- State Finances 2025-26 CSVs -->
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)" target="_blank">Dashboard A1</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv" target="_blank">Dashboard A2</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv" target="_blank">Dashboard A3</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv" target="_blank">Dashboard A4</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv" target="_blank">Dashboard A5</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv" target="_blank">Dashboard A6</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv" target="_blank">Dashboard A7</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv" target="_blank">Dashboard A8</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv" target="_blank">Dashboard A9</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv" target="_blank">Dashboard A10</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv" target="_blank">Dashboard A11</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv" target="_blank">Dashboard A12</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv" target="_blank">Dashboard A1 Rev Receipt</a></li>
-        <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv" target="_blank">Dashboard A2 Rev Receipt Components</a></li>
-        <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv" target="_blank">Final Annexures for PSF 2023-24</a></li>
+  <!-- State Finances 2025-26 Folder -->
+  <details>
+    <summary><strong>State Finances 2025-26</strong></summary>
+    <ul>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)">Dashboard A1</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv">Dashboard A2</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv">Dashboard A3</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv">Dashboard A4</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv">Dashboard A5</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv">Dashboard A6</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv">Dashboard A7</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv">Dashboard A8</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv">Dashboard A9</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv">Dashboard A10</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv">Dashboard A11</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv">Dashboard A12</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv">Dashboard A1 Rev Receipt</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv">Dashboard A2 Rev Receipt Components</a></li>
+      <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv">Final Annexures for PSF 2023-24</a></li>
     </ul>
+  </details>
 </div>
 
 <!-- Contact -->
