--- a/index.html
+++ b/index.html
@@ -144,20 +144,20 @@
     <summary><strong>State Finances 2025-26</strong></summary>
     <ul>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)">Dashboard A1</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv">Dashboard A2</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv">Dashboard A3</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv">Dashboard A4</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv">Dashboard A5</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv">Dashboard A6</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv">Dashboard A7</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv">Dashboard A8</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv">Dashboard A9</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv">Dashboard A10</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv">Dashboard A11</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv">Dashboard A12</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv">Dashboard A1 Rev Receipt</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv">Dashboard A2 Rev Receipt Components</a></li>
-      <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv">Final Annexures for PSF 2023-24</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv">Revenue Receipt</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv">Capital Receipts Components</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv">Revex Capex</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv">Committed Expdt</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A6_Sectoral RevExp).csv">Sectoral Revex</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A7_SectoralCapexWithLA).csv">Sectoral Capex</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv">Revex Major Functions</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv">Capex Major</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv">Object Head</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv">PD & PAL</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv">FRBM</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv">Revenue Receipt</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv">Revenue Receipt Components</a></li>
+      <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv">Total Sectoral Expdt 2023-24</a></li>
     </ul>
   </details>
 </div>
