--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
   <h2>Public Documents</h2>
   <ul>
     <!-- Existing PDFs -->
-    <li><a href="ROP_2019.pdf" target="_blank">Report on RoP 2019</a></li>
+    <li><a href="ROP_2019.pdf" target="_blank">RoP 2019</a></li>
+    <li><a href="Economic_Survey_2025-26" target="_blank">Economic Survey 2025-26</a></li>   
     <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
     <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
     <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
