--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <!-- Existing PDFs -->
     <li><a href="ROP_2019.pdf" target="_blank">RoP 2019</a></li>
     <li><a href="Economic_Survey_2025-26" target="_blank">Economic Survey 2025-26</a></li>   
+    <li><a href="Handbook_Statistics_Indian_States_2024-25" target="_blank">Handbook of Statistics of Indian States 2024-25</a></li>  
     <li><a href="16 FC Volume I.pdf" target="_blank">16 Finance Commission Volume I</a></li>
     <li><a href="16 FC Volume II.pdf" target="_blank">16 Finance Commission Volume II</a></li>
     <li><a href="Economic_Survey_Manipur_2022-23.pdf" target="_blank">Economic Survey Manipur 2022-23</a></li>
