--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
   <details>
     <summary><strong>State Finances 2025-26</strong></summary>
     <ul>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)">Dashboard A1</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv">Revenue Receipt</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1.csv)">Non-Debt Capital Receipts of the States</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt).csv">Revenue Receipts Components</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A3_Cap Receipts Components).csv">Capital Receipts Components</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A4_Revex & CapexIncludingLA).csv">Revex Capex</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A5_Committed Exp).csv">Committed Expdt</a></li>
@@ -155,7 +155,7 @@
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A8_RevEx Maj Functions).csv">Revex Major Functions</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A9_Capex Major LA Added).csv">Capex Major</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A10_object head wi).csv">Object Head</a></li>
-      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv">PD & PAL</a></li>
+      <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A11_PD&PAL).csv">Public Debt & Public Account Liability</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A12_FRBM_FA).csv">FRBM</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A1_Rev Receipt).csv">Revenue Receipt</a></li>
       <li><a href="State_Finances_2025-26/Dashbord_ Master data 2022-23NoEdit(A2_Rev Receipt Components).csv">Revenue Receipt Components</a></li>
