--- a/index.html
+++ b/index.html
@@ -162,7 +162,23 @@
       <li><a href="State_Finances_2025-26/Final Annexures for PSF 2023-2024(A8_ Total_Secotral_Exp).csv">Total Sectoral Expdt 2023-24</a></li>
     </ul>
   </details>
-</div>
+
+<!-- OM FD(PIC) Folder -->
+<details>
+  <summary><strong>OM FD(PIC)</strong></summary>
+  <ul>
+    <li>
+      <a href="OM_FD(PIC)/UPS_Notification_Manipur.pdf" target="_blank">
+        UPS Notification Manipur
+      </a>
+    </li>
+    <li>
+      <a href="OM_FD(PIC)/OM_Online_Pension_Portal_December_2025.pdf" target="_blank">
+        OM Online Pension Portal
+      </a>
+    </li>
+  </ul>
+</details>
 
 <!-- Contact -->
 <div class="section">
